erDiagram
    USERS ||--o{ CART : "has (FK: user_id, ON DELETE CASCADE)"
    USERS ||--o{ ORDERS : "places (FK: user_id, ON DELETE RESTRICT)"
    BOOKS ||--o{ CART : "in (FK: book_id, ON DELETE CASCADE)"
    BOOKS ||--o{ ORDER_ITEMS : "contains (FK: book_id, ON DELETE RESTRICT)"
    ORDERS ||--o{ ORDER_ITEMS : "has (FK: order_id, ON DELETE CASCADE)"

    USERS {
        int id PK "PRIMARY KEY, AUTO_INCREMENT"
        string username UK "UNIQUE, NOT NULL, INDEX"
        string email UK "UNIQUE, NOT NULL, INDEX"
        string password_hash "NOT NULL"
        string full_name "NOT NULL"
        string role "NOT NULL, CHECK(role IN ('admin','staff','customer')), INDEX"
        boolean is_active "DEFAULT TRUE, INDEX"
        string customer_code UK "UNIQUE, NULL (only for customers), INDEX"
        string staff_code UK "UNIQUE, NULL (only for staff), INDEX"
        datetime created_at "DEFAULT CURRENT_TIMESTAMP, INDEX"
    }

    BOOKS {
        int id PK "PRIMARY KEY, AUTO_INCREMENT"
        string title "NOT NULL, INDEX"
        string author "NOT NULL, INDEX"
        string category "NOT NULL, INDEX"
        text description "NULL"
        decimal price "NOT NULL, CHECK(price >= 0)"
        int stock "NOT NULL, DEFAULT 0, CHECK(stock >= 0)"
        string image_url "NULL"
        datetime created_at "DEFAULT CURRENT_TIMESTAMP"
        datetime updated_at "DEFAULT CURRENT_TIMESTAMP ON UPDATE CURRENT_TIMESTAMP"
    }

    CART {
        int id PK "PRIMARY KEY, AUTO_INCREMENT"
        int user_id FK "NOT NULL, FOREIGN KEY REFERENCES users(id), INDEX"
        int book_id FK "NOT NULL, FOREIGN KEY REFERENCES books(id), INDEX"
        int quantity "NOT NULL, DEFAULT 1, CHECK(quantity > 0)"
        datetime created_at "DEFAULT CURRENT_TIMESTAMP"
    }

    ORDERS {
        int id PK "PRIMARY KEY, AUTO_INCREMENT"
        int user_id FK "NOT NULL, FOREIGN KEY REFERENCES users(id), INDEX"
        decimal total_amount "NOT NULL, CHECK(total_amount >= 0)"
        string status "NOT NULL, DEFAULT 'pending', CHECK(status IN ('pending','confirmed','completed','cancelled')), INDEX"
        string payment_status "NOT NULL, DEFAULT 'pending', CHECK(payment_status IN ('pending','paid')), INDEX"
        text shipping_address "NOT NULL"
        datetime created_at "DEFAULT CURRENT_TIMESTAMP, INDEX"
        datetime updated_at "DEFAULT CURRENT_TIMESTAMP ON UPDATE CURRENT_TIMESTAMP"
    }

    ORDER_ITEMS {
        int id PK "PRIMARY KEY, AUTO_INCREMENT"
        int order_id FK "NOT NULL, FOREIGN KEY REFERENCES orders(id), INDEX"
        int book_id FK "NOT NULL, FOREIGN KEY REFERENCES books(id), INDEX"
        int quantity "NOT NULL, CHECK(quantity > 0)"
        decimal price "NOT NULL, CHECK(price >= 0)"
    }

    BANNERS {
        int id PK "PRIMARY KEY, AUTO_INCREMENT"
        string title "NOT NULL"
        text description "NULL"
        string image_url "NOT NULL"
        string link "NULL"
        string position "NOT NULL, CHECK(position IN ('home','detail','checkout')), INDEX"
        int display_order "NOT NULL, DEFAULT 0, INDEX"
        boolean is_active "DEFAULT TRUE, INDEX"
        datetime created_at "DEFAULT CURRENT_TIMESTAMP"
        datetime updated_at "DEFAULT CURRENT_TIMESTAMP ON UPDATE CURRENT_TIMESTAMP"
    }

